# PowerGridSimulation

./: CMakeLists.txt  README.md
src/: PowerElement.cpp  PowerElement.h  main.cpp
tests/:  test_PowerElement.cpp
